--- a/web/templates/pdf_to_image/pdf_to_image.html
+++ b/web/templates/pdf_to_image/pdf_to_image.html
@@ -3,12 +3,76 @@
     <head>
         <meta charset="UTF-8">
         <title> PDF_TO_IMAGE</title>
+        <style>
+            body {
+                font-family: 'Helvetica', Arial, sans-serif;
+                background-color: #f4f4f4;
+                text-align: center;
+                margin: 0;
+                padding: 0;
+            }
+    
+            .header {
+                background-color: #333;
+                color: #fff;
+                padding: 20px;
+            }
+    
+            h1 {
+                font-size: 28px;
+                margin-bottom: 10px;
+            }
+    
+            .content {
+                max-width: 600px;
+                margin: 0 auto;
+                padding: 20px;
+                background-color: #fff;
+                border-radius: 10px;
+                box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+            }
+    
+            input[type="file"] {
+                display: none;
+            }
+    
+            label.upload-label {
+                display: block;
+                background-color: #3498db;
+                color: #fff;
+                text-align: center;
+                padding: 15px;
+                border-radius: 5px;
+                cursor: pointer;
+            }
+    
+            input[type="submit"] {
+                display: none;
+            }
+    
+            label.submit-label {
+                display: block;
+                background-color: #27ae60;
+                color: #fff;
+                text-align: center;
+                padding: 15px;
+                border-radius: 5px;
+                cursor: pointer;
+            }
+        </style>
     </head>
     <body>
-        <div class="content">
+        <div class="header">
             <h1>PDF_TO_IMAGE</h1>
-
-            <form action="/action_page.php">
-            <input type="file", id="myFile" name="filename">
-            <input type="submit">
+        </div>
+        <div class~"content">
+            <form action="/convert_pdf_to_image" method="post" enctype="multipart/form-data">
+                <input type="file" id="myFile" name="pdf_file">
+                <label for="myFile" class="upload-label">ファイルを選択</label>
+                <input type="submit" value="PDFの画像化">
+                <label for="myFile" class="submit-label">変換開始</label>
+            </form>
+        </div>   
+            
     </body>
+</html>
